--- a/full-stack/client/index.html
+++ b/full-stack/client/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="mgr">
 
-  <title>Lesson3</title>
+  <title>Full Stack SPA</title>
   <base href="/">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
